feat: complete and simplify production training feature
